// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultsPerPage renders markup with state 1`] = `
<ng-ais-results-per-page
  cx={[Function Function]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-HitsPerPageSelector"
  >
    
        
    <ng-ais-header
      ng-reflect-class-name="ais-HitsPerPageSelector-header"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    <div
      class="ais-HitsPerPageSelector-body ais-body"
    >
      
          
      <select
        class="ais-HitsPerPageSelector-select"
      >
        
            
        
        <option
          class="ais-HitsPerPageSelector-option"
          value="10"
        >
          
              10 per page
            
        </option>
        <option
          class="ais-HitsPerPageSelector-option"
          value="20"
        >
          
              20 per page
            
        </option>
        <option
          class="ais-HitsPerPageSelector-option"
          value="30"
        >
          
              30 per page
            
        </option>
        
          
      </select>
      
        
    </div>
    
  
        
    <ng-ais-footer
      ng-reflect-class-name="ais-HitsPerPageSelector-footer"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-results-per-page>
`;

exports[`ResultsPerPage renders markup without state 1`] = `
<ng-ais-results-per-page
  cx={[Function Function]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div>
    
        
    <ng-ais-header>
      
      
      
      
    
    </ng-ais-header>
    
  
        
    <div>
      
          
      <select>
        
            
        
        
          
      </select>
      
        
    </div>
    
  
        
    <ng-ais-footer>
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-results-per-page>
`;
